# goodwe

./: .gitignore  LICENSE  README.md  VERSION  pylintrc  pyproject.toml  setup.cfg
.github/workflows/: pr.yaml  publish.yaml
goodwe/: __init__.py  const.py  dt.py  eh.py  es.py  et.py  exceptions.py  goodwe.py  inverter.py  modbus.py  model.py  processor.py  protocol.py  sensor.py  to_integrate.py  utils.py  xs.py
goodwexs/: __init__.py  goodwe.py  processor.py  protocol.py  utils.py
tests/: inverter_check.py  inverter_scan.py  inverter_test.py  mock_aa55_server.py  mock_tcp_server.py  mock_udp_server.py  stability_check.py  test_dt.py  test_eh.py  test_es.py  test_et.py  test_goodwe.py  test_modbus.py  test_processor.py  test_protocol.py  test_sensor.py  test_utils.py
tests/sample/: inverter_data  mock_data.txt
tests/sample/dt/: GW10K-MS-30_device_info.hex  GW10K-MS-30_running_data.hex  GW10K-MS-30_tcp_running_data.hex  GW17K-DT_device_info.hex  GW17K-DT_running_data.hex  GW20K-SDT-20_device_info.hex  GW20K-SDT-20_running_data.hex  GW20KAU-DT_device_info.hex  GW20KAU-DT_running_data.hex  GW5000-MS_device_info.hex  GW5000-MS_running_data.hex  GW5000D-NS_running_data.hex  GW50KS-MT_device_info.hex  GW50KS-MT_running_data.hex  GW6000-DT_running_data.hex  GW8K-DT_device_info.hex  GW8K-DT_running_data.hex  Mock_device_info.hex
tests/sample/eh/: GW6000_EH_device_info.hex  GW6000_EH_running_data1.hex
tests/sample/es/: GW5000S-BP_running_data.hex  GW5048-EM-no-bat_running_data.hex  GW5048-EM_device_info.hex  GW5048-EM_running_data.hex  GW5048-ESA_device_info.hex  GW5048-ESA_discovery.hex  GW5048-ESA_running_data.hex  GW5048D-ES_device_info.hex  GW5048D-ES_running_data.hex  GW5048D-ES_settings_data.hex  GW6000-ES-20_device_info.hex  dummy_ES_settings_data.hex
tests/sample/et/: GEH10-1U-10_device_info.hex  GEH10-1U-10_running_data.hex  GW10K-ET-SW819_device_info.hex  GW10K-ET_battery_info.hex  GW10K-ET_device_info_fw1023.hex  GW10K-ET_device_info_fw617.hex  GW10K-ET_device_info_fw819.hex  GW10K-ET_meter_data.hex  GW10K-ET_running_data.hex  GW10K-ET_running_data2.hex  GW10K-ET_running_data_fw1023.hex  GW20K-ET_battery_info.hex  GW20K-ET_device_info.hex  GW20K-ET_meter_data.hex  GW20K-ET_mppt_data.hex  GW20K-ET_running_data.hex  GW25K-ET_battery2_info_extended.hex  GW25K-ET_battery_info.hex  GW25K-ET_device_info.hex  GW25K-ET_meter_data.hex  GW25K-ET_mptt_data.hex  GW25K-ET_running_data.hex  GW29K9-ET_battery2_info.hex  GW29K9-ET_battery_info.hex  GW29K9-ET_device_info.hex  GW29K9-ET_meter_data.hex  GW29K9-ET_mppt_data.hex  GW29K9-ET_running_data.hex  GW5K-BT_device_info.hex  GW6000-ES-20_device_info.hex  GW6000_EH_running_data1.hex  eco_mode_v1.hex  eco_mode_v2.hex
