[metadata]
name = goodwe
description_file = README.md
description = Read solar panel data from a GoodWe inverter
keywords = GoodWe, Solar Panel, Inverter
license = MIT
author = Marcel Blijleven
author_email = 'marcelblijleven@gmail.com
url = https://github.com/marcelblijleven/goodwe
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
version_config = True
setup_requires =
    setuptools-git-versioning


[flake8]
exclude = venv
max-complexity = 10
max-line-length=160
inline-quotes = single
avoid-escape = False
multiline-quotes = """
