[metadata]
name = goodwe
description = Read data from GoodWe inverter via local network
long_description = file: README.md
long_description_content_type = text/markdown
version: file: VERSION
keywords = GoodWe, Solar Panel, Inverter, Photovoltaics, PV
license = MIT
author = Marcel Blijleven, Martin Letenay
author_email = 'marcelblijleven@gmail.com
url = https://github.com/marcelblijleven/goodwe
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
[options.packages.find]
exclude = tests*

[flake8]
exclude = venv
max-complexity = 10
max-line-length=160
inline-quotes = single
avoid-escape = False
multiline-quotes = """
