[metadata]
name = goodwe
description = Read data from GoodWe inverter via local network
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.4.9
keywords = GoodWe, Solar Panel, Inverter, Photovoltaics, PV
license = MIT
author = Martin Letenay, Marcel Blijleven
author_email = 'marcelblijleven@gmail.com
url = https://github.com/marcelblijleven/goodwe
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
packages = find:
python_requires = >= 3.8
[options.packages.find]
exclude = tests*

[flake8]
exclude = venv
max-complexity = 10
max-line-length=160
inline-quotes = single
avoid-escape = False
multiline-quotes = """
